--- a/style.css
+++ b/style.css
@@ -439,8 +439,8 @@ body {
 }
 
 .profile-image {
-    object-fit: cover !important; /* Keep aspect ratio while filling */
-    object-position: center 30% !important;
+    object-fit: contain !important; /* Keep aspect ratio while filling */
+    object-position: top center  !important;
     border-radius: 0 !important;
     box-shadow: none !important;
     animation: zoomIn 1s ease-out both;
